--- a/playbook.yaml
+++ b/playbook.yaml
@@ -8,4 +8,6 @@ tasks:
     state: present
     unified_job_template: "Demo Job Template"
     rrule: "DTSTART:20191219T130551Z RRULE:FREQ=WEEKLY;INTERVAL=1;COUNT=1"
+    controller_password: 'letmein@123'
+    controller_username: 'admin'
   register: result
